# blog_os

./: Cargo.toml  LICENSE.md  OVMF-pure-efi.fd  OVMF_CODE-pure-efi.fd  README.md  qemu_bios.sh  qemu_efi.sh  rust-toolchain  rustfmt.toml
.cargo/: config.toml
boot/src/: main.rs
licenses/: LICENSE-APACHE  LICENSE-MIT
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
