[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["boot"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

[dependencies]
bootloader = "0.10.8"
linked_list_allocator = "0.9.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.2"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-timeout = 60
test-args = [
    "-device",  "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",  "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
